src/styles/index.css
@charset "UTF-8";

:root {
    --color-base: oklch(99% 0.01 106);
    --color-content: oklch(21% 0.01 106);
    --color-primary: oklch(35% 0.132 264);
    --color-primary-content: oklch(99% 0.132 264);
    --color-secondary: oklch(55% 0.01 106);

    @media (prefers-color-scheme: dark) {
        --color-base: oklch(21% 0.01 267);
        --color-content: oklch(95% 0.01 267);
        --color-primary: oklch(55% 0.132 264);
        --color-primary-content: oklch(99% 0.132 264);
        --color-secondary: oklch(65% 0.01 267);
    }
}

.typst-math,
.typst-invert {
    @media (prefers-color-scheme: dark) {
        filter: invert(95%);
    }
}

.typst-darken {
    @media (prefers-color-scheme: dark) {
        filter: brightness(90%);
    }
}

html {
    font-size: 16px;
}

body {
    background-color: var(--color-base);
    color: var(--color-content);
    font-family: var(--font-mlmodern);
}

main {
    width: 85%;
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
}

article {
    padding: 5rem 0;
    max-width: 38rem;
}

aside,
span[role="note"] {
    position: relative;
    float: right;
    clear: right;
    width: 100%;
    display: flow-root;
    margin: 1rem 0;
    padding: 0 1rem;
    box-sizing: border-box;

    &.note {
        color: var(--color-secondary);

        .typst-math {
            filter: contrast(60%);
        }
    }

    @media (min-width: 1024px) {
        width: 19rem;
        margin-top: 0;
        margin-right: -20rem;
        padding-left: 2rem;
    }

    &.numbering {
        display: inline flex;
        gap: 0.5rem;
    }
}

nav {
    width: 100%;

    & ul {
        display: flex;
        margin: 0;
        padding: 1rem;
        gap: 1rem;

        & li {
            display: inline-block;
        }
    }
}

section[role="doc-endnotes"],
section[role="doc-bibliography"] {
    display: none;
}

p {
    text-wrap: balance;
    text-wrap: pretty;
    text-autospace: normal;
    margin: 1rem 0;
    line-height: 1.5rem;

    .compact & {
        line-height: 1rem;
    }
}

ul,
ol {
    line-height: 1.5rem;
}

blockquote {
    line-height: 1.5em;
}

.typst-math-block {
    text-align: center;
}

.typst-math-inline {
    display: inline-block;
    margin-bottom: -0.25em;
    margin-top: -0.25em;
    vertical-align: -1.15em;
    line-height: 0;
}

a {
    color: inherit;
    text-underline-offset: 0.1em;
    text-decoration-thickness: 0.05em;
}

pre {
    overflow-x: auto;
    scrollbar-width: thin;
}

code {
    font-family: var(--font-monaspace-neon);
    font-size: 80%;
}

blockquote {
    & cite {
        display: block;
        text-align: right;
        font-style: italic;
    }
}

.image-content-grid {
    display: block;

    @media (min-width: 640px) {
        display: grid;
        grid-template-columns: auto 1fr;
        gap: 1rem;
        align-items: center;
    }
}

h1,
h2,
h3,
h4,
h5,
h6 {
    position: relative;
    scroll-margin-top: 4rem;
    scroll-snap-margin: 4rem;
    scroll-snap-stop: always;

    & .heading-anchor {
        vertical-align: middle;
        position: absolute;
        left: -1.5rem;
        color: var(--color-secondary);

        &:hover {
            color: var(--color-content);
        }
    }
}

nav[role="doc-toc"] {

    &>ol,
    &>ul {
        padding-left: 0;
    }
}

